--- a/gui/tinyI2C.ui
+++ b/gui/tinyI2C.ui
@@ -698,7 +698,17 @@ window</string>
           </spacer>
          </item>
          <item>
+          <widget class="QSpinBox" name="format_SPI">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="speed_SPI">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="suffix">
             <string>MHz</string>
            </property>
@@ -2835,6 +2845,9 @@ window</string>
              </item>
              <item row="2" column="0">
               <widget class="QPushButton" name="reg67">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
                <property name="minimumSize">
                 <size>
                  <width>40</width>
@@ -2847,7 +2860,7 @@ window</string>
                 </font>
                </property>
                <property name="text">
-                <string>0</string>
+                <string>X</string>
                </property>
                <property name="checkable">
                 <bool>true</bool>
@@ -2931,6 +2944,9 @@ window</string>
              </item>
              <item row="2" column="4">
               <widget class="QPushButton" name="reg63">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
                <property name="minimumSize">
                 <size>
                  <width>40</width>
@@ -2943,7 +2959,7 @@ window</string>
                 </font>
                </property>
                <property name="text">
-                <string>0</string>
+                <string>X</string>
                </property>
                <property name="checkable">
                 <bool>true</bool>
@@ -2955,6 +2971,9 @@ window</string>
              </item>
              <item row="2" column="5">
               <widget class="QPushButton" name="reg62">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
                <property name="minimumSize">
                 <size>
                  <width>40</width>
@@ -2967,7 +2986,7 @@ window</string>
                 </font>
                </property>
                <property name="text">
-                <string>0</string>
+                <string>X</string>
                </property>
                <property name="checkable">
                 <bool>true</bool>
